[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.36",
    "build>=0.10"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pypointmatcher"
dependencies = ["numpy>=1.20"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3"
]
