enable_testing()
find_package(GTest)
if(GTEST_FOUND)
	include_directories(${GTEST_INCLUDE_DIR})
	add_executable(utest utest.cpp)
	target_link_libraries(utest pointmatcher ${NABO_LIBRARY} ${EXTRA_LIBS} ${GTEST_BOTH_LIBRARIES} ${Boost_LIBRARIES})
	add_test(utest ${CMAKE_CURRENT_BINARY_DIR}/utest --gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/test_results.xml --path "${CMAKE_SOURCE_DIR}/examples/data/")
else(GTEST_FOUND)
	message("Google test (gtest) not found - Set manually GTEST_ROOT to your gtest installation directory")
endif(GTEST_FOUND)
